# kernel-lib-template

./: .devcontainer.json  .gitignore  CMakeLists.txt  README.md  pyproject.toml  version_with_meta.py
cmake/: FindPipCUDAToolkit.cmake  find_pip_cuda.py
klib/: __init__.py
klib/ops/add/: add_kernel.cc  add_kernel.cu  add_kernel.h
klib/ops/alloc/: alloc_kernel.cc
klib/ops/include/: tvm_ffi_utils.h
tests/: alloc_in_ffi.py  simple_add.py
